applications/n8n/network-policy.yaml
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: n8n-network-policy
#   namespace: n8n
# spec:
#   podSelector:
#     matchLabels:
#       app: n8n
#   policyTypes:
#   - Ingress
#   - Egress
#   ingress:
#   - from:
#     - namespaceSelector:
#         matchLabels:
#           kubernetes.io/metadata.name: kube-system
#     ports:
#     - protocol: TCP
#       port: 5678
#   - ports:
#     - protocol: TCP
#       port: 5678
#   egress:
#   - to:
#     - podSelector:
#         matchLabels:
#           app: postgres
#     ports:
#     - protocol: TCP
#       port: 5432
#   - ports:
#     - protocol: TCP
#       port: 80
#     - protocol: TCP
#       port: 443

# ---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-network-policy
  namespace: n8n
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: n8n
    ports:
    - protocol: TCP
      port: 5432
  egress: []
